--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
   <form id="form" action="" method="get" class="form">
     <div>
       <label for="fullname" class="form-label">Your name:</label>
-      <input type="text" placeholder="VD:Phan Mạnh Quỳnh" name="fullname" id="fullname" class="form-control" />
-      <span class="form-message"></span>
+      <input type="text" placeholder="VD: Phan Mạnh Quỳnh" name="fullname" id="fullname" class="form-control" />
+      <span class="form-error"></span>
     </div>
     <div>
       <label for="email" class="form-label">Your email:</label>
       <input type="text" name="email" id="email" class="form-control" placeholder="email@example.com" />
-      <span class="form-message"></span>
+      <span class="form-error"></span>
     </div>
     <div>
       <label for="subject" class="form-label">Subject:</label>
       <input type="text" name="subject" id="subject" class="form-control" />
-      <span class="form-message"></span>
+      <span class="form-error"></span>
     </div>
     <div>
       <label for="message" class="form-label">Message</label>
       <textarea name="message" id="message" class="form-control" rows="8" cols="30"></textarea>
-      <span class="form-message"></span>
+      <span class="form-error"></span>
     </div>
     <input type="submit" value="Send message" class="form-submit" />
   </form>
