--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Validate form</title>
 
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-  <h2 class="heading" id="heading">Contact me</h2>
-  <hr />
   <form id="form" action="" method="get" class="form">
     <div>
       <label for="fullname" class="form-label">Your name:</label>
@@ -30,8 +28,8 @@
       <span class="form-error"></span>
     </div>
     <div>
-      <label for="message" class="form-label">Message</label>
-      <textarea name="message" id="message" class="form-control" rows="8" cols="30"></textarea>
+      <label for="message" class="form-label">Message:</label>
+      <textarea name="message" id="message" class="form-control"></textarea>
       <span class="form-error"></span>
     </div>
     <input type="submit" value="Send message" class="form-submit" />
