--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
     <div>
       <label for="fullname" class="form-label">Your name:</label>
       <input type="text" placeholder="VD: Phan Mạnh Quỳnh" name="fullname" id="fullname" class="form-control" />
-      <span class="form-error"></span>
+      <span class="form-message"></span>
     </div>
     <div>
       <label for="email" class="form-label">Your email:</label>
       <input type="text" name="email" id="email" class="form-control" placeholder="email@example.com" />
-      <span class="form-error"></span>
+      <span class="form-message"></span>
     </div>
     <div>
       <label for="subject" class="form-label">Subject:</label>
       <input type="text" name="subject" id="subject" class="form-control" />
-      <span class="form-error"></span>
+      <span class="form-message"></span>
     </div>
     <div>
       <label for="message" class="form-label">Message:</label>
       <textarea name="message" id="message" class="form-control"></textarea>
-      <span class="form-error"></span>
+      <span class="form-message"></span>
     </div>
     <input type="submit" value="Send message" class="form-submit" />
   </form>
